--- a/index.ipynb
+++ b/index.ipynb
@@ -243,22 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(\".com\") # False"
+    "\"art.vandelay@vandelay.co\".endswith(\".co\") # False"
    ]
   },
   {
