--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "int()\"7285553334\") = 1 # 7285553335"
+    "int(\"7285553334\") = 1 # 7285553335"
    ]
   },
   {
